src/objects/Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <picklist>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume drop off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No vacancy - Decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent another jobseeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wage subsidy details sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work trial organised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not disturb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wage subsidy signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actioned__c</fullName>
        <label>Actioned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>NOT(ISBLANK(Actioned__c)) ||  No_Further_Action_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Employer_Contact__r.Contact_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Employer_Contact__r.Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Person__c</fullName>
        <formula>Employer_Contact__r.Contact_Person__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Contact  Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Position__c</fullName>
        <formula>Employer_Contact__r.Contact_Position__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Contact Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact__c</fullName>
        <label>Employer Contact</label>
        <referenceTo>Employer_Contact__c</referenceTo>
        <relationshipLabel>Follow Ups</relationshipLabel>
        <relationshipName>Follow_Ups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Employer_Contact__r.Business__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup_Employer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Followup Employer Contact</label>
        <referenceTo>Employer_Contact__c</referenceTo>
        <relationshipLabel>Follow Ups (Followup Employer Contact)</relationshipLabel>
        <relationshipName>Follow_Ups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <formula>Employer_Contact__r.Interview_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Time__c</fullName>
        <formula>TEXT(Employer_Contact__r.Interview_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interview Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Seeker</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Follow Ups</relationshipLabel>
        <relationshipName>Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Further_Action_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Further Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>ISBLANK(Actioned__c) &amp;&amp; No_Further_Action_Required__c = false &amp;&amp; (TODAY() - Due_Date__c &gt; 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Employer undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed to attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative employer feedback re JSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commenced/ETS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Repeat Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vacancy_Job_Seeker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy Job Seeker</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Follow Ups (Vacancy Job Seeker)</relationshipLabel>
        <relationshipName>Vacancy_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Follow Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Actioned__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Job_Seeker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FU{0000000000}</displayFormat>
        <label>Follow Up ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>